--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +25,57 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"/></a>
+      <div class="header-divider"></div>
+        <nav>
+             <ul>
+                 <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+                 <li><a href="about/index.html" target="_blank">About</a></li>
+             </ul>
+        </nav>
+    </div>
+  </header>
+
+  <main>
+    <section>
+      <h1>Retreat from the desk, return refreshed.</h1>
+      <img src="img/female-camper.png" alt="female camper"/>
+    </section>
+    <aside>
+      <h2>Want to join the next retreat?</h2>
+      <p>Find out when we are holding our next retreat and how your company can sign up!</p>
+      <h2>Find out more</h2>
+      <div class="sign-up">
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinerary">
+      </div>
+    </aside>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <address>
+          </address>
+        </div>
+          <div class="social">
+              <div class="social-icons">
+                  <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                  <!-- other social links here --> 
+              </div>
+          </div>
+      </div> <!-- footer content ends --> 
+  </div> <!--footer content-wrapper ends-->
+  
+  <div class="copyright"> 
+  </div> 
+  </footer>
+
+
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
