Updated about page and faq page

--- a/about/index.html
+++ b/about/index.html
@@ -23,9 +23,76 @@
 </head>
 
 <body>
+    <header>
+      <div class="content-wrapper">
+        <a href="#"><img src="" alt="unplugged logo"/></a>
+        <div class="header-divider"></div>
+          <nav>
+               <ul>
+                   <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+                   <li><a href="about/index.html" target="_blank">About</a></li>
+               </ul>
+          </nav>
+      </div>
+    </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    <main>
+      <section class="mission">
+        <div class=content-wrapper>
+          <h1>Our Mission-we want to make your team you always wanted to be.</h1>
+        </div>
+        <div class="mission-content">
+          <p>The objective for our campers is to encourage you to not become possessed with modern technology. Instead, you should take the time to enjoy nature and company of your co-workers.</p>
+        </div> <!--MISSION CONTENT WRAPPER ENDS-->
+      </section> <!--CONTENT INFO-->
+
+      <section class="map">
+        <figure> <img src="#" alt="wisconsin-map"/> </figure>
+      </section>
+
+      <section class="contact-section">
+        <div class="content-wrapper">
+          <h1>Contact us, because all you need is this.</h1>
+          <h3>General Information</h3>
+        </div>
+        <div class="general-contact">
+          <address>
+            <p>333 Main St., Lake Geneva, WI 53147</p> 
+            <p>555-555-5555</p>
+            <p>hello@unplugged.com</p>
+          </address>
+        </div>
+        <div class="facilitator-contact">
+          <h3>Chat with a Faciliator</h3>
+          <p>555-555-5555</p> 
+          <p>facilitator@unplugged.com</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <div class="contact">
+            <address>
+              <h2>Contact</h2>
+              <p>hello@unplugged.com</p>
+            </address>
+          </div>
+            <div class="social">
+                <div class="social-icons">
+                  <h4>Social</h4>
+                    <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                    <p><a href="#" target="_blank"></a></p>
+                    <p><a href="#" target="_blank"></a></p>
+                </div>
+            </div>
+        </div> <!-- footer content ends --> 
+    </div> <!--footer content-wrapper ends-->
+    <div class="copyright"> 
+      <p>Copyright 2021 | Unplugged</p>
+    </div> 
+    </footer>
+  
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
