--- a/faq/index.html
+++ b/faq/index.html
@@ -24,8 +24,43 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+ <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"/></a>
+      <div class="header-divider"></div>
+        <nav>
+             <ul>
+                 <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+                 <li><a href="about/index.html" target="_blank">About</a></li>
+             </ul>
+        </nav>
+    </div>
+  </header>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <address>
+            <h2>Contact</h2>
+            <p>hello@unplugged.com</p>
+          </address>
+        </div>
+          <div class="social">
+              <div class="social-icons">
+                <h4>Social</h4>
+                  <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                  <p><a href="#" target="_blank"></a></p>
+                  <p><a href="#" target="_blank"></a></p>
+              </div>
+          </div>
+      </div> <!-- footer content ends --> 
+  </div> <!--footer content-wrapper ends-->
+  <div class="copyright"> 
+    <p>Copyright 2021 | Unplugged</p>
+  </div> 
+  </footer>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
