--- a/faq/index.html
+++ b/faq/index.html
@@ -30,13 +30,38 @@
       <div class="header-divider"></div>
         <nav>
              <ul>
-                 <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+                 <li><a href="index.html" target="_blank">FAQ</a></li>
                  <li><a href="about/index.html" target="_blank">About</a></li>
              </ul>
         </nav>
     </div>
   </header>
+<main>
+  <section class="questions">
+    <div class=content-wrapper>
+      <h1>Frequently Asked Questions</h1>
+    </div>
+    <div class="frequently-asked-questions">
+      <div class="faq-content">
+        <h3>How do I get to the Unplugged Retreat?</h3>
+        <p>Fill out an application and facilitator will contact you for a consultation interview.</p>
+        </div>
+      </div>
+      <div class="faq-content">
+        <h3>What kind of team is right for the Unplugged retreat?</h3>
+        <p>For now, we only accept company teams</p>
+      </div>
+      <div class="faq-content">
+        <h3>What size teams can you accomodate?</h3>
+        <p>We accomdate groups of all sizes as long as it does not exceed the maximum of 50 per group.</p>
+      </div>
+      <div class="faq-content">
+        <h3>Is there really no wifi available?</h3>
+        <p>Only in the computer rooms</p>
+      </div> <!--FAQ CONTENT WRAPPER ENDS-->
+  </section> 
 
+</main>
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
