Updated page layout

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat| About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -39,7 +39,7 @@
     <main>
       <section class="mission">
         <div class=content-wrapper>
-          <h1>Our Mission-we want to make your team you always wanted to be.</h1>
+          <h2>Our Mission-we want to make your team you always wanted to be.</h2>
         </div>
         <div class="mission-content">
           <p>The objective for our campers is to encourage you to not become possessed with modern technology. Instead, you should take the time to enjoy nature and company of your co-workers.</p>
@@ -52,35 +52,37 @@
 
       <section class="contact-section">
         <div class="content-wrapper">
-          <h1>Contact us, because all you need is this.</h1>
-          <h3>General Information</h3>
-        </div>
-        <div class="general-contact">
-          <address>
-            <p>333 Main St., Lake Geneva, WI 53147</p> 
-            <p>555-555-5555</p>
-            <p>hello@unplugged.com</p>
-          </address>
-        </div>
-        <div class="facilitator-contact">
-          <h3>Chat with a Faciliator</h3>
-          <p>555-555-5555</p> 
-          <p>facilitator@unplugged.com</p>
-        </div>
+          <h2>Contact us, because all you need is this.</h2>
+          <address class="contact-information">
+            <div>
+             <h4>General Information</h4>
+             <p>333 Main St., Lake Geneva, WI 53147<br>
+             555-555-5555<br>
+             hello@unplugged.com</p>
+            </div>
+            <div>
+            <h3>Chat with a Faciliator</h3>
+            <p>555-555-5555<br>
+            facilitator@unplugged.com</p>
+           </div>
+         </address>     <!--contact-information div ends here-->              
+        </div>          <!---content-wrapper div ends here-->
       </section>
     </main>
     <footer>
       <div class="content-wrapper">
         <div class="footer-content">
           <div class="contact">
+            <h4>Contact</h4>
             <address>
-              <h2>Contact</h2>
-              <p>hello@unplugged.com</p>
+            <p>
+              555-555-5555 <br>
+              hello@unplugged.com</p>
             </address>
           </div>
             <div class="social">
+              <h4>Social</h4>
                 <div class="social-icons">
-                  <h4>Social</h4>
                     <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
                     <p><a href="#" target="_blank"></a></p>
                     <p><a href="#" target="_blank"></a></p>
