--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title> Unplugged Retreat | FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -37,7 +37,6 @@
     </div>
   </header>
 <main>
-  <section class="questions">
     <div class=content-wrapper>
       <h1>Frequently Asked Questions</h1>
     </div>
@@ -59,21 +58,19 @@
         <h3>Is there really no wifi available?</h3>
         <p>Only in the computer rooms</p>
       </div> <!--FAQ CONTENT WRAPPER ENDS-->
-  </section> 
-
-</main>
+  </main>
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
+          <h4>Contact</h4>
           <address>
-            <h2>Contact</h2>
-            <p>hello@unplugged.com</p>
+           <p>hello@unplugged.com</p>
           </address>
         </div>
           <div class="social">
+            <h4>Social</h4>
               <div class="social-icons">
-                <h4>Social</h4>
                   <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
                   <p><a href="#" target="_blank"></a></p>
                   <p><a href="#" target="_blank"></a></p>
