--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                  <li><a href="about/index.html" target="_blank">About</a></li>
              </ul>
         </nav>
-    </div>
+    </div> <!---HEADER CONTENT WRAPPER DIV ENDS-->
   </header>
 
   <main>
@@ -49,9 +49,9 @@
     <aside>
       <div class="content-wrapper">
         <div class="form-description">
-          <h2>Want to join the next retreat?</h2>
+          <h3>Want to join the next retreat?</h3>
           <p>Find out when we are holding our next retreat and how your company can sign up!</p>
-          <h2>Find out more</h2>
+          <h3>Find out more</h3>
           <div class="form">
             <input type="text" name="name" value="email address">
             <input type="button" value="Download Itinerary">
@@ -62,7 +62,7 @@
     
       <section class="features"> 
       <div class="content-wrapper">
-        <h1>Have the work week you always dreamed of-without the bad wifi</h1>
+        <h2>Have the work week you always dreamed of-without the bad wifi</h2>
         <div class="features-items">
           <article>
             <p class="fontawesome-icon"></p>
@@ -94,15 +94,15 @@
        
     <section class="reviews">
      <div class="content-wrapper">
-      <h1> Be a better team in 5 days, like these</h1>
-      <div>
+      <h2> Be a better team in 5 days, like this one</h2>
         <article>
+          <div>
           <img src="#" alt="retreat group"/>
           <h3>LaCrue Bottling Co. October 2019</h3>
           <p> I enjoyed going to the Unplugged retreat. Camp is fun. I forgot how much fun it was to do activities that does not involve technology.</p>
+          </div>
         </article>
       </div>
-     </div>
     </section>
   </main>  <!--MAIN WRAPPER-->
 
@@ -110,9 +110,9 @@
     <div class="content-wrapper">
       <div class="footer-content">
         <div class="contact">
+          <h4>Contact</h4>
           <address>
-            <h2>Contact</h2>
-            <p>hello@unplugged.com</p>
+          <p>hello@unplugged.com</p>
           </address>
         </div>
           <div class="social">
