Updated page layout aesthetics

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav>
              <ul>
                  <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-                 <li><a href="about/index.html" target="_blank">About</a></li>
+                 <li><a href="about/index.html" target="_blank">ABOUT</a></li>
              </ul>
         </nav>
     </div> <!---HEADER CONTENT WRAPPER DIV ENDS-->
@@ -53,13 +53,13 @@
         <div class="form-description">
           <h3>Want to join the next retreat?</h3>
           <p>Find out when we are holding our next retreat and how your company can sign up!</p>
-          <h3>Find out more</h3>
+        </div>
           <div class="form">
+            <h3>Find out more</h3>
             <input type="text" name="name" value="email address">
             <input type="button" value="Download Itinerary">
           </div>
-        </div>
-      </div> <!---ASIDE CONTENT WRAPPER ENDS-->
+        </div> <!---ASIDE CONTENT WRAPPER ENDS-->
     </aside>
     
       <section class="features"> 
