--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
           <nav>
                <ul>
                    <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-                   <li><a href="index.html" target="_blank">About</a></li>
+                   <li><a href="index.html" target="_blank">ABOUT</a></li>
                </ul>
           </nav>
       </div>
@@ -40,9 +40,10 @@
       <section class="mission">
         <div class=content-wrapper>
           <h2>Our Mission-we want to make your team you always wanted to be.</h2>
+          <div class="mission-content">
+            <p>The objective for our campers is to encourage you to not become possessed with modern technology. 
+              Instead, you should take the time to enjoy nature and company of your co-workers.</p>
         </div>
-        <div class="mission-content">
-          <p>The objective for our campers is to encourage you to not become possessed with modern technology. Instead, you should take the time to enjoy nature and company of your co-workers.</p>
         </div> <!--MISSION CONTENT WRAPPER ENDS-->
       </section> <!--CONTENT INFO-->
 
@@ -53,7 +54,7 @@
       <section class="contact-section">
         <div class="content-wrapper">
           <h2>Contact us, because all you need is this.</h2>
-          <address class="contact-information">
+          <address class="contact-content">
             <div>
              <h4>General Information</h4>
              <p>333 Main St., Lake Geneva, WI 53147<br>
