--- a/faq/index.html
+++ b/faq/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <!---GOOGLE FONTS-->
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -31,34 +33,33 @@
         <nav>
              <ul>
                  <li><a href="index.html" target="_blank">FAQ</a></li>
-                 <li><a href="about/index.html" target="_blank">About</a></li>
+                 <li><a href="about/index.html" target="_blank">ABOUT</a></li>
              </ul>
         </nav>
     </div>
   </header>
-<main>
-    <div class=content-wrapper>
-      <h1>Frequently Asked Questions</h1>
+<main class="faq">
+  <div class="content-wrapper">
+    <h2>Frequently Asked Questions</h2>  
+  <div class="faq-content">
+    <h3>How do I get to the Unplugged Retreat?</h3>
+    <p>Fill out an application and facilitator will contact you for a consultation interview.</p>
     </div>
-    <div class="frequently-asked-questions">
-      <div class="faq-content">
-        <h3>How do I get to the Unplugged Retreat?</h3>
-        <p>Fill out an application and facilitator will contact you for a consultation interview.</p>
-        </div>
-      </div>
-      <div class="faq-content">
-        <h3>What kind of team is right for the Unplugged retreat?</h3>
-        <p>For now, we only accept company teams</p>
-      </div>
-      <div class="faq-content">
-        <h3>What size teams can you accomodate?</h3>
-        <p>We accomdate groups of all sizes as long as it does not exceed the maximum of 50 per group.</p>
-      </div>
-      <div class="faq-content">
-        <h3>Is there really no wifi available?</h3>
-        <p>Only in the computer rooms</p>
-      </div> <!--FAQ CONTENT WRAPPER ENDS-->
-  </main>
+    <div class="faq-content">
+      <h3>What kind of team is right for the Unplugged retreat?</h3>
+      <p>For now, we only accept company teams</p>
+    </div>
+    <div class="faq-content">
+      <h3>What size teams can you accomodate?</h3>
+      <p>We accomdate groups of all sizes as long as it does not exceed the maximum of 50 per group.</p>
+    </div>
+    <div class="faq-content">
+      <h3>Is there really no wifi available?</h3>
+      <p>Only in the computer rooms</p>
+    </div>
+</div>   
+</main>
+
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
