Added Utah map to about page

--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,9 @@
       </section> <!--CONTENT INFO-->
 
       <section class="map">
-        <figure> <img src="#" alt="wisconsin-map"/> </figure>
+        <figure> 
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153325.1447042953!2d-113.79007186830331!3d39.48245047217987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874c6bc78f13f9cd%3A0xbddf4aa56cd7463f!2sUtah!5e0!3m2!1sen!2sus!4v1627573914044!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </figure>
       </section>
 
       <section class="contact-section">
