Added icons to homepage

--- a/faq/index.html
+++ b/faq/index.html
@@ -22,6 +22,8 @@
   <meta name="theme-color" content="#fafafa">
   <!---GOOGLE FONTS-->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+<!--FONT AWESOME ICONS-->
+<script src="https://kit.fontawesome.com/7f8ebc4f99.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
