--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <!--FONT AWESOME ICONS-->
+  <script src="https://kit.fontawesome.com/7f8ebc4f99.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
