--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <meta name="theme-color" content="#fafafa">
   <!---GOOGLE FONTS-->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+<!--FONT AWESOME ICONS-->
+<script src="https://kit.fontawesome.com/7f8ebc4f99.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -70,27 +72,39 @@
        
         <div class="features-items">
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fas fa-campground"></i>
+            </p>
             <p class="features-item-description">Located in a peaceful bungalow inside Geneva, Wisconsin</p>
             </article>
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fas fa-bed"></i>
+              </p>
               <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms</p>
             </article>
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fas fa-utensils"></i>
+              </p>
               <p class="features-item-description">Private chef team providing on-demand meals-just like your team kitchen</p>
             </article>
             <article>
-              <p class="fontawesome-icon"></p>   
+              <p class="fontawesome-icon">
+                <i class="fas fa-shoe-prints"></i>
+              </p>   
              <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow</p>
             </article>
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fas fa-smile"></i>
+              </p>
               <p class="features-item-description"> Retreate facilitator to manage your daily activities so you get all the chance to rest</p>
             </article>
             <article>
-              <p class="fontawesome-icong"></p>
+              <p class="fontawesome-icong">
+                <i class="fas fa-wifi"></i>
+              </p>
               <p class="features-item-description">Dedicated computer room for times you must wifi</p>
             </article>
         </div>
