--- a/faq/index.html
+++ b/faq/index.html
@@ -74,9 +74,9 @@
           <div class="social">
             <h4>Social</h4>
               <div class="social-icons">
-                  <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-                  <p><a href="#" target="_blank"></a></p>
-                  <p><a href="#" target="_blank"></a></p>
+                  <p><a href="https://www.facebook.com/yoursite" target="_blank"></a><i class="fab fa-facebook"></i></p>
+                  <p><a href="#" target="_blank"></a><i class="fab fa-instagram"></i></p>
+                  <p><a href="#" target="_blank"></a><i class="fab fa-twitter"></i></p>
               </div>
           </div>
       </div> <!-- footer content ends --> 
