--- a/index.html
+++ b/index.html
@@ -135,15 +135,16 @@
         <div class="contact">
           <h4>Contact</h4>
           <address>
+          <p>555-555-5555</p>
           <p>hello@unplugged.com</p>
           </address>
         </div>
           <div class="social">
+            <h4>Social</h4>
               <div class="social-icons">
-                <h4>Social</h4>
-                  <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-                  <p><a href="#" target="_blank"></a></p>
-                  <p><a href="#" target="_blank"></a></p>
+                <p><a href="https://www.facebook.com/yoursite" target="_blank"></a> <i class="fab fa-facebook-f"></i></p>
+                <p><a href="#" target="_blank"></a><i class="fab fa-instagram"></i> </p>
+                <p><a href="#" target="_blank"></a><i class="fab fa-twitter"></i> </p>
               </div>
           </div>
       </div> <!-- footer content ends --> 
