--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,9 @@
 <body>
     <header>
       <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo"/></a>
+        <figure>
+          <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"/></a>
+        </figure>
         <div class="header-divider"></div>
           <nav>
                <ul>
@@ -61,7 +63,7 @@
           <address class="contact-content">
             <div>
              <h4>General Information</h4>
-             <p>333 Main St., Lake Geneva, WI 53147<br>
+             <p>333 Main St., Park City, UT 84060<br>
              555-555-5555<br>
              hello@unplugged.com</p>
             </div>
