--- a/faq/index.html
+++ b/faq/index.html
@@ -30,7 +30,9 @@
 
  <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"/></a>
+      <figure>
+        <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"/></a>
+      </figure>
       <div class="header-divider"></div>
         <nav>
              <ul>
@@ -68,6 +70,7 @@
         <div class="contact">
           <h4>Contact</h4>
           <address>
+           <p>555-555-5555</p>
            <p>hello@unplugged.com</p>
           </address>
         </div>
