--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
         <div class="header-divider"></div>
           <nav>
                <ul>
-                   <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+                   <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
                    <li><a href="index.html" target="_blank">ABOUT</a></li>
                </ul>
           </nav>
