--- a/faq/index.html
+++ b/faq/index.html
@@ -37,7 +37,7 @@
         <nav>
              <ul>
                  <li><a href="index.html" target="_blank">FAQ</a></li>
-                 <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+                 <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
              </ul>
         </nav>
     </div>
