Updated font size on contact section and about page

--- a/about/index.html
+++ b/about/index.html
@@ -62,14 +62,15 @@
           <h2>Contact us, because all you need is this.</h2>
           <address class="contact-content">
             <div>
-             <h4>General Information</h4>
+             <h3>General Information</h3>
              <p>333 Main St., Park City, UT 84060<br>
              555-555-5555<br>
              hello@unplugged.com</p>
             </div>
             <div>
             <h3>Chat with a Faciliator</h3>
-            <p>555-555-5555<br>
+            <p>Jennifer Sims <br>
+              555-555-5555<br>
             facilitator@unplugged.com</p>
            </div>
          </address>     <!--contact-information div ends here-->              
