--- a/faq/index.html
+++ b/faq/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="faq-content">
       <h3>Is there really no wifi available?</h3>
-      <p>Only in the computer rooms</p>
+      <p>Yes, really! The only purpose of this retreat is to abstain from technology and enjoy nature.</p>
     </div>
 </div>   
 </main>
